cmake_minimum_required(VERSION 3.15)

project(chstonec)

set(CMAKE_CXX_STANDARD 26)

if(FAST_IO_DIR)
include_directories(${FAST_IO_DIR}/include)
endif()

if(CMAKE_SYSTEM_NAME STREQUAL "Windows" OR CMAKE_SYSTEM_NAME STREQUAL "Cygwin" OR CMAKE_SYSTEM_NAME STREQUAL "Msys")
link_libraries(ntdll)
endif()

include(CTest)

add_executable(adpcm adpcm/adpcm.cc)
add_executable(aes aes/aes.cc)
add_executable(blowfish blowfish/bf.cc)
add_executable(dfadd dfadd/dfadd.cc)
add_executable(dfdiv dfdiv/dfdiv.cc)
add_executable(dfmul dfmul/dfmul.cc)
add_executable(dfsin dfsin/dfsin.cc)
add_executable(gsm gsm/gsm.cc)
add_executable(jpeg jpeg/main.cc)
add_executable(mips mips/mips.cc)
add_executable(motion motion/mpeg2.cc)
add_executable(sha sha/sha_driver.cc)

add_test(NAME adpcm COMMAND ${CMAKE_CROSSCOMPILING_EMULATOR} $<TARGET_FILE:adpcm>)
add_test(NAME aes COMMAND ${CMAKE_CROSSCOMPILING_EMULATOR} $<TARGET_FILE:aes>)
add_test(NAME blowfish COMMAND ${CMAKE_CROSSCOMPILING_EMULATOR} $<TARGET_FILE:blowfish>)
add_test(NAME dfadd COMMAND ${CMAKE_CROSSCOMPILING_EMULATOR} $<TARGET_FILE:dfadd>)
add_test(NAME dfdiv COMMAND ${CMAKE_CROSSCOMPILING_EMULATOR} $<TARGET_FILE:dfdiv>)
add_test(NAME dfmul COMMAND ${CMAKE_CROSSCOMPILING_EMULATOR} $<TARGET_FILE:dfmul>)
add_test(NAME dfsin COMMAND ${CMAKE_CROSSCOMPILING_EMULATOR} $<TARGET_FILE:dfsin>)
add_test(NAME gsm COMMAND ${CMAKE_CROSSCOMPILING_EMULATOR} $<TARGET_FILE:gsm>)
add_test(NAME jpeg COMMAND ${CMAKE_CROSSCOMPILING_EMULATOR} $<TARGET_FILE:jpeg>)
add_test(NAME mips COMMAND ${CMAKE_CROSSCOMPILING_EMULATOR} $<TARGET_FILE:mips>)
add_test(NAME motion COMMAND ${CMAKE_CROSSCOMPILING_EMULATOR} $<TARGET_FILE:motion>)
add_test(NAME sha COMMAND ${CMAKE_CROSSCOMPILING_EMULATOR} $<TARGET_FILE:sha>)